[package]
name = "Telegram_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.9", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
